Kubernetes-prod/competex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: competex-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: localhost # Use localhost for development, replace for prod: competex.schnykjaer.com
    http:
      paths:
      - path: /backend # Backend would not be exposed in a real-world scenario
        pathType: Prefix
        backend:
          service:
            name: competex-backend-service
            port:
              number: 8080
          namespace: competex-backend # Specify the backend namespace
      - path: /frontend # Frontend would have its own host than backend
        pathType: Prefix
        backend:
          service:
            name: competex-frontend-service
            port:
              number: 8080
          namespace: competex-frontend # Specify the frontend namespace
